# usc-core

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build
include/usc/: Visibility.hpp
include/usc/math/: Angle.hpp  Coordinates.hpp  Vectors.hpp
include/usc/phys/: Links.hpp
include/usc/txt/: Print.hpp
src/demo/: main.cpp
src/math/: Angle.cpp  Coordinates.cpp  Vectors.cpp
src/phys/: Links.cpp
src/txt/: Print.cpp
